@@ -1,3 +1,9 @@
+2016-02-18  Ola Jeppsson  <ola@adapteva.com>
+
+	* e-utils/src/e-read.c (main): Remove call to
+	e_reset_system().
+	* e-utils/src/e-write.c (main): Likewise.
+
 2016-02-16  Ola Jeppsson  <ola@adapteva.com>
 
 	* e-utils/Makemodule.am: Add e-dump-regs target.
